add multiplayer datastructure create new game (WIP)